# gem

./: .gitignore  README.md  gem_build_FindTool.txt
home/mhodges/local/doc/: Linux_Notes.txt  gem_todo.txt  pkgconf_characteristics.txt
home/mhodges/local/sbin/: gem_bash_init  user_bash_init  user_cmd_init.bat  vscode_cyg.bat  vscode_cyg.lnk  vscode_msys2.bat  vscode_msys2.lnk
local/doc/: bash_notes.txt  environ_android_setup.txt  environ_code.txt.sh  environ_cygwin_setup.txt  environ_fedora_34_setup.txt  environ_fedora_36_setup.txt  environ_fedora_setup.txt  environ_msys_setup.txt  environ_msys_setup_troubleshooting.txt  environ_network.txt  environ_web.txt  environ_wsl_setup.txt  git.txt
local/media/ascii/: GemSource.txt
local/media/icons/cygwin/: cygwin_00.xcf
local/media/icons/msys/: msys2_00.xcf
local/media/icons/vscode/: vscode.xcf  vscode_cyg.xcf  vscode_cyg_01.xcf  vscode_cyg_02.xcf  vscode_cyg_03.xcf  vscode_msys2_01.xcf  vscode_msys2_02.xcf
local/sbin/: gem_array  gem_bash_init  gem_build  gem_build_find  gem_build_find.py  gem_build_validate  gem_cmd_init.bat  gem_log  gem_log.py  gem_mountall  gem_oop  gem_script  gem_script.py  gem_stack  gem_umountall
local/src/cmake/: cmake_utils_pre.cmake  config_aarch64-linux-android.cmake  config_android_common.cmake  config_common.cmake  config_x86_64-pc-linux-gnu.cmake  config_x86_64-w64-mingw32.cmake
local/src/doxygen-1.9.1/: dox_and_js.txt  doxygen_setup.txt  gem_build_doxygen
local/src/examples/cmake_hello/: gem_build_cmake_hello
local/src/examples/cmake_hello/src/: CMakeLists.txt  main.cpp
local/src/examples/cmake_hello/src_saved/: cmake_utils_post.cmake
local/src/examples/cmake_shared_and_static_libs/: buildtool
local/src/examples/cmake_shared_and_static_libs/old/: CMakeLists.txt  CMakeLists.txt.old  buildtool
local/src/examples/cmake_shared_and_static_libs/src/: CMakeLists.txt  SharedLib.cpp  SharedLib.h  StaticLib.cpp  StaticLib.h  main.cpp
local/src/examples/helloworld/: main.cpp
local/src/examples/simple_c/: ReadMe.txt  buildtool  main.c
local/src/examples/simple_cpp/: ReadMe.txt  buildtool  main.cpp
local/src/examples/simple_cpp_sharedlib/: ReadMe.txt  buildtool  main.cpp  sharedlib.cpp  sharedlib.h
local/src/examples/simple_cpp_staticlib/: ReadMe.txt  buildtool  main.cpp  staticlib.cpp  staticlib.h
local/src/examples/simple_pthread/: buildtool  main.cpp
local/src/gettext-0.19.8/: gem_build_gettext
local/src/glib-2.63.0/: gem_build_glib
local/src/libffi-3.2/: gem_build_libffi
local/src/libiconv-1.16/: buildtool  gem_build_iconv  gem_build_libiconv
local/src/ogre-1.12.3/: build_commands.txt  gem_build_ogre
local/src/ogre-1.12.4/: buildtool  buildtool2  buildtool_samplebrowser  gem_build_ogre
local/src/ogre/v1-12/2019_12_15/: build_android_notes.txt
local/src/ogre_apps/: .gitignore
local/src/pkgconf-1.6.3/: gem_build_pkgconf
local/src/python_test_0/: python_test_0_log.html  workspace.code-workspace
local/src/sdl2-2.0.10/: buildtool  gem_build_sdl2
local/src/sdl2-2.0.10/tests/: ReadMe.txt
local/src/sdl2-2.0.10/tests/LinkTest/: buildtool
local/src/sdl2-2.0.10/tests/hello_sdl/: buildall  buildtool
local/src/sdl2-2.0.10/tests/hello_sdl/src/: CMakeLists.txt
local/src/sdl2-2.0.11/: android.patch  gem_build_sdl2  gem_build_sdl2_tests
local/src/sdl2-2.0.11/tests/FileTest_00/: buildtool
local/src/sdl2-2.0.11/tests/LinkTest/src/: CMakeLists.txt
local/src/sdl2-2.0.11/tests/hello_sdl/src/: swap
local/src/sdl2-2.0.14/: gem_build_sdl2  gem_build_sdl2_tests
local/src/sdl2-2.0.14/tests/FileTest_00/: test_deleteme
local/src/sdl2/mercurial/2019_12_15/: gem_build_sdl2
local/src/temp/cmake_utils/: cmake_utils.cmake  config_android_arm64_v8a.cmake  config_android_common.cmake  config_common.cmake  config_linux.cmake  config_mingw.cmake
local/src/texinfo-6.7/: gem_build_texinfo
local/src/texinfo-6.7/src/: Makefile.in  configure
local/src/texinfo-6.7/src/Pod-Simple-Texinfo/: Makefile.in
local/src/texinfo-6.7/src/autom4te.cache/: output.1  requests  traces.0  traces.1
local/src/texinfo-6.7/src/doc/: Makefile.in  version.texi
local/src/texinfo-6.7/src/doc/tp_api/: Makefile.in
local/src/texinfo-6.7/src/gnulib/lib/: Makefile.in
local/src/texinfo-6.7/src/info/: Makefile.in
local/src/texinfo-6.7/src/install-info/: Makefile.in
local/src/texinfo-6.7/src/install-info/tests/: Makefile.in
local/src/texinfo-6.7/src/man/: Makefile.in
local/src/texinfo-6.7/src/texindex/: Makefile.in
local/src/texinfo-6.7/src/tp/: Makefile.in  Makefile.tres
local/src/texinfo-6.7/src/tp/Texinfo/XS/: Makefile.in  aclocal.m4  config.in  configure
local/src/texinfo-6.7/src/tp/Texinfo/XS/autom4te.cache/: output.0  requests  traces.0  traces.1
local/src/texinfo-6.7/src/tp/Texinfo/XS/gnulib/lib/: Makefile.in
local/src/texinfo-6.7/src/tp/tests/: Makefile.in
local/src/texinfo-6.7/src/tp/tests/contents/: Makefile.in
local/src/texinfo-6.7/src/tp/tests/formatting/: Makefile.in
local/src/texinfo-6.7/src/tp/tests/indices/: Makefile.in
local/src/texinfo-6.7/src/tp/tests/layout/: Makefile.in
local/src/texinfo-6.7/src/tp/tests/many_input_files/: Makefile.in
local/src/texinfo-6.7/src/tp/tests/nested_formats/: Makefile.in
local/src/texinfo-6.7/src/tp/tests/sectioning/: Makefile.in
local/src/texinfo-6.7/src/tp/tests/tex_html/: Makefile.in
local/src/texinfo-6.7/src/util/: Makefile.in
local/src/toolchains/: android.toolchain.cmake  android.toolchain.meson  cygwin.toolchain.cmake  cygwin.toolchain.meson  linux.toolchain.cmake  mingw.toolchain.cmake
local/src/zlib-1.2.11/: gem_build_zlib
local/src/zziplib-0.1.3/: gem_build_zziplib
local/src/zziplib-0.1.3/cmake/: CMakeLists.txt  _config.h.cmake
local/src/zziplib-0.13.72/: gem_build_zziplib  gem_patch_mingw.patch
local/toolchains/: android.toolchain.cmake  android.toolchain.cmake.google  android.toolchain.meson  linux.toolchain.meson  mingw.toolchain.cmake  mingw_on_linux.toolchain.meson  mingw_on_windows.toolchain.meson
tmp/toolchains/: mingw.toolchain.cmake
